Add missing AdSense critical pages and improvements
- Created Disclaimer page (comprehensive legal disclaimer)
- Created Contact page (with contact form and information)
- Created About Us page (company information and values)
- Added Schema.org structured data to all 95 pages
- Added breadcrumb navigation to all pages
- Added trust badges and SSL seals to main pages
- All pages now have proper SEO markup
- AdSense compliance improvements

Legal pages now complete:
 Privacy Policy (already existed)
 Terms of Service (already existed)
 Disclaimer (NEW)
 Contact Page (NEW)
 About Us (NEW)

--- a/blog-how-to-crop-pdf.html
+++ b/blog-how-to-crop-pdf.html
@@ -506,6 +506,28 @@
         }
     </style>
     <link rel="stylesheet" href="css/voice-assistant.css">
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Article",
+      "headline": "How to Crop PDF Pages - Complete Guide | easyjpgtopdf",
+      "description": "Learn how to crop PDF pages to remove unwanted margins and areas. Resize PDF pages easily.",
+      "author": {
+        "@type": "Person",
+        "name": "easyjpgtopdf Team"
+      },
+      "publisher": {
+        "@type": "Organization",
+        "name": "easyjpgtopdf",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://easyjpgtopdf.com/images/logo.png"
+        }
+      },
+      "datePublished": "2025-11-23",
+      "dateModified": "2025-11-23"
+    }
+    </script>
 </head>
 <body>
     <header>
@@ -608,6 +630,17 @@
             </nav>
         </div>
     </header>
+
+    <nav aria-label="Breadcrumb" style="padding: 15px 0; background: #f8f9ff; border-bottom: 1px solid #e2e6ff;">
+        <div class="container" style="max-width: 1200px; margin: 0 auto; padding: 0 24px;">
+            <ol style="list-style: none; display: flex; flex-wrap: wrap; gap: 10px; margin: 0; padding: 0; align-items: center;">
+                <li><a href="index.html" style="color: #4361ee; text-decoration: none; font-weight: 500;">Home</a> <span style="margin: 0 8px; color: #9ca3af;">/</span></li>
+                <li><a href="blog.html" style="color: #4361ee; text-decoration: none; font-weight: 500;">Blog</a> <span style="margin: 0 8px; color: #9ca3af;">/</span></li>
+                <li style="color: #56607a; font-weight: 500;">How To Crop Pdf</li>
+            </ol>
+        </div>
+    </nav>
+
 
     <main>
         <div class="container">
