--- a/jpg-to-pdf.html
+++ b/jpg-to-pdf.html
@@ -11,6 +11,26 @@
 <style>*{margin:0;padding:0;box-sizing:border-box;font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif}:root{--primary:#4361ee;--secondary:#3a0ca3;--accent:#4cc9f0;--light:#f8f9fa;--dark:#212529;--gray:#6c757d;--card:#ffffff;--border:#e5e7eb;--brand:var(--primary);--brand-dark:var(--secondary)}body{background-color:#f5f7ff;color:var(--dark);min-height:100vh;display:flex;flex-direction:column;line-height:1.6}.container{max-width:1400px;margin:0 auto;padding:0 24px}header{background:#fff;position:sticky;top:0;z-index:100;box-shadow:0 2px 10px rgba(0,0,0,.08)}.navbar{display:flex;justify-content:space-between;align-items:center;padding:14px 0}.logo{display:flex;gap:10px;align-items:center;font-size:22px;font-weight:700;color:var(--brand);text-decoration:none}.logo i{color:var(--brand-dark)}nav .nav-links{display:flex;gap:22px;align-items:center}nav a{color:var(--dark);text-decoration:none;font-weight:500}nav a:hover,nav a.active{color:var(--brand)}.dropdown{position:relative}.dropdown-content{display:none;position:absolute;background:#fff;min-width:220px;border-radius:10px;box-shadow:0 8px 20px rgba(0,0,0,.12);top:100%;left:0;padding:10px 0}.dropdown:hover .dropdown-content{display:block}.dropdown-content a{display:block;padding:10px 18px}.hero{background:linear-gradient(135deg,var(--brand),var(--brand-dark));color:#fff;padding:48px 0;text-align:center;margin-bottom:24px;border-radius:0 0 16px 16px}.tool-page{background:var(--card);border-radius:16px;padding:32px;box-shadow:0 8px 24px rgba(0,0,0,.08);margin-bottom:24px}.upload-area{border:2px dashed var(--border);border-radius:16px;padding:48px;text-align:center;cursor:pointer;background:linear-gradient(145deg,#fff,#fdf2f2)}.upload-area:hover{border-color:var(--brand);box-shadow:0 8px 20px rgba(67,97,238,.12)}.btn{display:inline-block;background:var(--brand);color:#fff;border:none;border-radius:40px;padding:10px 18px;margin-right:8px;cursor:pointer;transition:.2s transform,.2s box-shadow}.btn:hover{transform:translateY(-1px);box-shadow:0 6px 16px rgba(67,97,238,.25)}.btn.secondary{background:#fff;color:var(--brand);border:1px solid var(--brand)}.btn.accent{background:var(--accent)}.preview-item{box-shadow:0 4px 12px rgba(0,0,0,.06)}.comments{padding:40px 0;background:#fff;border-radius:20px;margin:20px 0}.comment-form{max-width:600px;margin:0 auto;background:var(--light);padding:22px;border-radius:12px}.form-group{margin-bottom:14px}.form-control{width:100%;padding:12px;border:1px solid #ddd;border-radius:8px}footer{background:var(--dark);color:#fff;padding:40px 0 20px;margin-top:auto}.footer-content{display:grid;grid-template-columns:repeat(auto-fit,minmax(200px,1fr));gap:22px;margin-bottom:20px}.footer-links{list-style:none}.footer-links a{color:#aaa;text-decoration:none}.footer-links a:hover{color:#fff}.copyright{text-align:center;color:#aaa;border-top:1px solid #444;padding-top:16px;font-size:.9rem}@media(max-width:768px){nav .nav-links{display:none}}</style>
 <link href="css/header.css" rel="stylesheet"/>
 <link href="css/theme-modern.css" rel="stylesheet"/>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebPage",
+      "name": "JPG to PDF Converter - Convert Images to PDF Online Free | easyjpgtopdf",
+      "description": "Convert JPG images to PDF documents online for free. Merge multiple images into a single PDF file instantly. No registration required.",
+      "url": "https://easyjpgtopdf.com/jpg-to-pdf.html",
+      "inLanguage": "en-US",
+      "isPartOf": {
+        "@type": "WebSite",
+        "name": "easyjpgtopdf",
+        "url": "https://easyjpgtopdf.com"
+      },
+      "publisher": {
+        "@type": "Organization",
+        "name": "easyjpgtopdf",
+        "url": "https://easyjpgtopdf.com"
+      }
+    }
+    </script>
 </head>
 <body>
 <header>
@@ -104,6 +124,16 @@
             </nav>
         </div>
     </header>
+
+    <nav aria-label="Breadcrumb" style="padding: 15px 0; background: #f8f9ff; border-bottom: 1px solid #e2e6ff;">
+        <div class="container" style="max-width: 1200px; margin: 0 auto; padding: 0 24px;">
+            <ol style="list-style: none; display: flex; flex-wrap: wrap; gap: 10px; margin: 0; padding: 0; align-items: center;">
+                <li><a href="index.html" style="color: #4361ee; text-decoration: none; font-weight: 500;">Home</a> <span style="margin: 0 8px; color: #9ca3af;">/</span></li>
+                <li style="color: #56607a; font-weight: 500;">Jpg To Pdf</li>
+            </ol>
+        </div>
+    </nav>
+
 <section class="hero"><div class="container"><h1>JPG to PDF Converter - Convert Images to PDF Online Free</h1><p>Convert JPG/JPEG images into high-quality PDF documents.</p></div></section>
 <main class="container">
 <div class="tool-page">
@@ -422,6 +452,32 @@
         icon.style.transform = isOpen ? 'rotate(0deg)' : 'rotate(90deg)';
     }
     </script>
+
+    <div class="trust-badges" style="text-align: center; padding: 20px; background: linear-gradient(135deg, #f8f9ff, #ffffff); border-radius: 12px; margin: 30px 0; border: 2px solid #e2e6ff;">
+        <div style="display: flex; justify-content: center; align-items: center; gap: 40px; flex-wrap: wrap;">
+            <div style="display: flex; align-items: center; gap: 10px;">
+                <i class="fas fa-shield-alt" style="font-size: 2rem; color: #4361ee;"></i>
+                <div style="text-align: left;">
+                    <div style="color: #0b1630; font-weight: 600; font-size: 1.1rem;">SSL Secured</div>
+                    <div style="color: #56607a; font-size: 0.9rem;">256-bit Encryption</div>
+                </div>
+            </div>
+            <div style="display: flex; align-items: center; gap: 10px;">
+                <i class="fas fa-lock" style="font-size: 2rem; color: #4361ee;"></i>
+                <div style="text-align: left;">
+                    <div style="color: #0b1630; font-weight: 600; font-size: 1.1rem;">100% Secure</div>
+                    <div style="color: #56607a; font-size: 0.9rem;">Files Auto-Deleted</div>
+                </div>
+            </div>
+            <div style="display: flex; align-items: center; gap: 10px;">
+                <i class="fas fa-check-circle" style="font-size: 2rem; color: #4361ee;"></i>
+                <div style="text-align: left;">
+                    <div style="color: #0b1630; font-weight: 600; font-size: 1.1rem;">AdSense Verified</div>
+                    <div style="color: #56607a; font-size: 0.9rem;">Google Approved</div>
+                </div>
+            </div>
+        </div>
+    </div>
 </main>
 <script>document.getElementById('y').textContent=new Date().getFullYear();</script>
     
