--- a/resume-maker.html
+++ b/resume-maker.html
@@ -1381,6 +1381,26 @@
             }
         }
     </style>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebPage",
+      "name": "Resume Maker - Create Professional Resume Online Free | easyjpgtopdf",
+      "description": "Create professional resumes online for free. Build your perfect resume with our easy-to-use resume maker tool. Free resume builder.",
+      "url": "https://easyjpgtopdf.com/resume-maker.html",
+      "inLanguage": "en-US",
+      "isPartOf": {
+        "@type": "WebSite",
+        "name": "easyjpgtopdf",
+        "url": "https://easyjpgtopdf.com"
+      },
+      "publisher": {
+        "@type": "Organization",
+        "name": "easyjpgtopdf",
+        "url": "https://easyjpgtopdf.com"
+      }
+    }
+    </script>
 </head>
 <body>
     <!-- Header -->
@@ -1475,6 +1495,16 @@
             </nav>
         </div>
     </header>
+
+    <nav aria-label="Breadcrumb" style="padding: 15px 0; background: #f8f9ff; border-bottom: 1px solid #e2e6ff;">
+        <div class="container" style="max-width: 1200px; margin: 0 auto; padding: 0 24px;">
+            <ol style="list-style: none; display: flex; flex-wrap: wrap; gap: 10px; margin: 0; padding: 0; align-items: center;">
+                <li><a href="index.html" style="color: #4361ee; text-decoration: none; font-weight: 500;">Home</a> <span style="margin: 0 8px; color: #9ca3af;">/</span></li>
+                <li style="color: #56607a; font-weight: 500;">Resume Maker</li>
+            </ol>
+        </div>
+    </nav>
+
 
     <div class="container">
         <div class="app-container">
@@ -2210,7 +2240,27 @@
                                 text-align: right;
                             }
                         </style>
-                    </head>
+                        <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebPage",
+      "name": "Resume Maker - Create Professional Resume Online Free | easyjpgtopdf",
+      "description": "Create professional resumes online for free. Build your perfect resume with our easy-to-use resume maker tool. Free resume builder.",
+      "url": "https://easyjpgtopdf.com/resume-maker.html",
+      "inLanguage": "en-US",
+      "isPartOf": {
+        "@type": "WebSite",
+        "name": "easyjpgtopdf",
+        "url": "https://easyjpgtopdf.com"
+      },
+      "publisher": {
+        "@type": "Organization",
+        "name": "easyjpgtopdf",
+        "url": "https://easyjpgtopdf.com"
+      }
+    }
+    </script>
+</head>
                     <body>
                         <div class="print-wrapper">${preview.outerHTML}</div>
                     
@@ -2355,6 +2405,32 @@
         icon.style.transform = isOpen ? 'rotate(0deg)' : 'rotate(90deg)';
     }
     </script>
+
+    <div class="trust-badges" style="text-align: center; padding: 20px; background: linear-gradient(135deg, #f8f9ff, #ffffff); border-radius: 12px; margin: 30px 0; border: 2px solid #e2e6ff;">
+        <div style="display: flex; justify-content: center; align-items: center; gap: 40px; flex-wrap: wrap;">
+            <div style="display: flex; align-items: center; gap: 10px;">
+                <i class="fas fa-shield-alt" style="font-size: 2rem; color: #4361ee;"></i>
+                <div style="text-align: left;">
+                    <div style="color: #0b1630; font-weight: 600; font-size: 1.1rem;">SSL Secured</div>
+                    <div style="color: #56607a; font-size: 0.9rem;">256-bit Encryption</div>
+                </div>
+            </div>
+            <div style="display: flex; align-items: center; gap: 10px;">
+                <i class="fas fa-lock" style="font-size: 2rem; color: #4361ee;"></i>
+                <div style="text-align: left;">
+                    <div style="color: #0b1630; font-weight: 600; font-size: 1.1rem;">100% Secure</div>
+                    <div style="color: #56607a; font-size: 0.9rem;">Files Auto-Deleted</div>
+                </div>
+            </div>
+            <div style="display: flex; align-items: center; gap: 10px;">
+                <i class="fas fa-check-circle" style="font-size: 2rem; color: #4361ee;"></i>
+                <div style="text-align: left;">
+                    <div style="color: #0b1630; font-weight: 600; font-size: 1.1rem;">AdSense Verified</div>
+                    <div style="color: #56607a; font-size: 0.9rem;">Google Approved</div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
                 </html>
             `);
@@ -2600,7 +2676,27 @@
                 <html xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:w="urn:schemas-microsoft-com:office:word" xmlns="http://www.w3.org/TR/REC-html40">
                     <head><meta charset="utf-8"><title>Resume Maker - Create Professional Resume Online Free | easyjpgtopdf</title>
     <meta name="description" content="Create professional resumes online for free. Build your perfect resume with our easy-to-use resume maker tool. Free resume builder.">
-    <meta name="keywords" content="resume maker, create resume, resume builder, make resume online, professional resume, free resume maker">${styles}</head>
+    <meta name="keywords" content="resume maker, create resume, resume builder, make resume online, professional resume, free resume maker">${styles}    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebPage",
+      "name": "Resume Maker - Create Professional Resume Online Free | easyjpgtopdf",
+      "description": "Create professional resumes online for free. Build your perfect resume with our easy-to-use resume maker tool. Free resume builder.",
+      "url": "https://easyjpgtopdf.com/resume-maker.html",
+      "inLanguage": "en-US",
+      "isPartOf": {
+        "@type": "WebSite",
+        "name": "easyjpgtopdf",
+        "url": "https://easyjpgtopdf.com"
+      },
+      "publisher": {
+        "@type": "Organization",
+        "name": "easyjpgtopdf",
+        "url": "https://easyjpgtopdf.com"
+      }
+    }
+    </script>
+</head>
                     <body>${preview.outerHTML}
     <section class="explanatory-content" style="margin: 40px 0; padding: 40px; background: linear-gradient(135deg, #f8f9ff, #ffffff); border-radius: 16px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
         <div class="container" style="max-width: 900px; margin: 0 auto;">
@@ -2743,6 +2839,32 @@
         icon.style.transform = isOpen ? 'rotate(0deg)' : 'rotate(90deg)';
     }
     </script>
+
+    <div class="trust-badges" style="text-align: center; padding: 20px; background: linear-gradient(135deg, #f8f9ff, #ffffff); border-radius: 12px; margin: 30px 0; border: 2px solid #e2e6ff;">
+        <div style="display: flex; justify-content: center; align-items: center; gap: 40px; flex-wrap: wrap;">
+            <div style="display: flex; align-items: center; gap: 10px;">
+                <i class="fas fa-shield-alt" style="font-size: 2rem; color: #4361ee;"></i>
+                <div style="text-align: left;">
+                    <div style="color: #0b1630; font-weight: 600; font-size: 1.1rem;">SSL Secured</div>
+                    <div style="color: #56607a; font-size: 0.9rem;">256-bit Encryption</div>
+                </div>
+            </div>
+            <div style="display: flex; align-items: center; gap: 10px;">
+                <i class="fas fa-lock" style="font-size: 2rem; color: #4361ee;"></i>
+                <div style="text-align: left;">
+                    <div style="color: #0b1630; font-weight: 600; font-size: 1.1rem;">100% Secure</div>
+                    <div style="color: #56607a; font-size: 0.9rem;">Files Auto-Deleted</div>
+                </div>
+            </div>
+            <div style="display: flex; align-items: center; gap: 10px;">
+                <i class="fas fa-check-circle" style="font-size: 2rem; color: #4361ee;"></i>
+                <div style="text-align: left;">
+                    <div style="color: #0b1630; font-weight: 600; font-size: 1.1rem;">AdSense Verified</div>
+                    <div style="color: #56607a; font-size: 0.9rem;">Google Approved</div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
                 </html>
             `;
@@ -3241,6 +3363,32 @@
         icon.style.transform = isOpen ? 'rotate(0deg)' : 'rotate(90deg)';
     }
     </script>
+
+    <div class="trust-badges" style="text-align: center; padding: 20px; background: linear-gradient(135deg, #f8f9ff, #ffffff); border-radius: 12px; margin: 30px 0; border: 2px solid #e2e6ff;">
+        <div style="display: flex; justify-content: center; align-items: center; gap: 40px; flex-wrap: wrap;">
+            <div style="display: flex; align-items: center; gap: 10px;">
+                <i class="fas fa-shield-alt" style="font-size: 2rem; color: #4361ee;"></i>
+                <div style="text-align: left;">
+                    <div style="color: #0b1630; font-weight: 600; font-size: 1.1rem;">SSL Secured</div>
+                    <div style="color: #56607a; font-size: 0.9rem;">256-bit Encryption</div>
+                </div>
+            </div>
+            <div style="display: flex; align-items: center; gap: 10px;">
+                <i class="fas fa-lock" style="font-size: 2rem; color: #4361ee;"></i>
+                <div style="text-align: left;">
+                    <div style="color: #0b1630; font-weight: 600; font-size: 1.1rem;">100% Secure</div>
+                    <div style="color: #56607a; font-size: 0.9rem;">Files Auto-Deleted</div>
+                </div>
+            </div>
+            <div style="display: flex; align-items: center; gap: 10px;">
+                <i class="fas fa-check-circle" style="font-size: 2rem; color: #4361ee;"></i>
+                <div style="text-align: left;">
+                    <div style="color: #0b1630; font-weight: 600; font-size: 1.1rem;">AdSense Verified</div>
+                    <div style="color: #56607a; font-size: 0.9rem;">Google Approved</div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
 
