--- a/add-page-numbers.html
+++ b/add-page-numbers.html
@@ -47,6 +47,26 @@ body{background:linear-gradient(135deg,#f5f7ff 0%,#e9ecef 100%);min-height:100vh
 .feature-card p{color:var(--gray);font-size:0.9rem}
 @media(max-width:768px){.action-buttons{flex-direction:column}.btn{width:100%}.features{grid-template-columns:1fr}}
 </style>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebPage",
+      "name": "Add Page Numbers to PDF - Number PDF Pages Online Free | easyjpgtopdf",
+      "description": "Add page numbers to PDF documents online for free. Number your PDF pages automatically. Free PDF page numbering tool.",
+      "url": "https://easyjpgtopdf.com/add-page-numbers.html",
+      "inLanguage": "en-US",
+      "isPartOf": {
+        "@type": "WebSite",
+        "name": "easyjpgtopdf",
+        "url": "https://easyjpgtopdf.com"
+      },
+      "publisher": {
+        "@type": "Organization",
+        "name": "easyjpgtopdf",
+        "url": "https://easyjpgtopdf.com"
+      }
+    }
+    </script>
 </head>
 <body>
 <header>
@@ -140,6 +160,16 @@ body{background:linear-gradient(135deg,#f5f7ff 0%,#e9ecef 100%);min-height:100vh
             </nav>
         </div>
     </header>
+
+    <nav aria-label="Breadcrumb" style="padding: 15px 0; background: #f8f9ff; border-bottom: 1px solid #e2e6ff;">
+        <div class="container" style="max-width: 1200px; margin: 0 auto; padding: 0 24px;">
+            <ol style="list-style: none; display: flex; flex-wrap: wrap; gap: 10px; margin: 0; padding: 0; align-items: center;">
+                <li><a href="index.html" style="color: #4361ee; text-decoration: none; font-weight: 500;">Home</a> <span style="margin: 0 8px; color: #9ca3af;">/</span></li>
+                <li style="color: #56607a; font-weight: 500;">Add Page Numbers</li>
+            </ol>
+        </div>
+    </nav>
+
 <div class="container page-wrap">
 <div class="converter-header">
 <h1>Add Page Numbers to PDF - Number PDF Pages Online Free</h1>
@@ -287,6 +317,32 @@ document.addEventListener('DOMContentLoaded',function(){const a=document.getElem
         icon.style.transform = isOpen ? 'rotate(0deg)' : 'rotate(90deg)';
     }
     </script>
+
+    <div class="trust-badges" style="text-align: center; padding: 20px; background: linear-gradient(135deg, #f8f9ff, #ffffff); border-radius: 12px; margin: 30px 0; border: 2px solid #e2e6ff;">
+        <div style="display: flex; justify-content: center; align-items: center; gap: 40px; flex-wrap: wrap;">
+            <div style="display: flex; align-items: center; gap: 10px;">
+                <i class="fas fa-shield-alt" style="font-size: 2rem; color: #4361ee;"></i>
+                <div style="text-align: left;">
+                    <div style="color: #0b1630; font-weight: 600; font-size: 1.1rem;">SSL Secured</div>
+                    <div style="color: #56607a; font-size: 0.9rem;">256-bit Encryption</div>
+                </div>
+            </div>
+            <div style="display: flex; align-items: center; gap: 10px;">
+                <i class="fas fa-lock" style="font-size: 2rem; color: #4361ee;"></i>
+                <div style="text-align: left;">
+                    <div style="color: #0b1630; font-weight: 600; font-size: 1.1rem;">100% Secure</div>
+                    <div style="color: #56607a; font-size: 0.9rem;">Files Auto-Deleted</div>
+                </div>
+            </div>
+            <div style="display: flex; align-items: center; gap: 10px;">
+                <i class="fas fa-check-circle" style="font-size: 2rem; color: #4361ee;"></i>
+                <div style="text-align: left;">
+                    <div style="color: #0b1630; font-weight: 600; font-size: 1.1rem;">AdSense Verified</div>
+                    <div style="color: #56607a; font-size: 0.9rem;">Google Approved</div>
+                </div>
+            </div>
+        </div>
+    </div>
 <footer>
         <div class="container footer-inner">
             <div class="footer-company-links">
