--- a/ai-image-generator.html
+++ b/ai-image-generator.html
@@ -5,6 +5,26 @@
 <link href="css/footer.css" rel="stylesheet"/><link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet"/><style>*{margin:0;padding:0;box-sizing:border-box;font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif}:root{--primary:#4361ee;--secondary:#3a0ca3;--light:#f8f9fa;--dark:#212529}.container{max-width:1200px;margin:0 auto;padding:0 20px}body{background:#f5f7ff;color:var(--dark);min-height:100vh;display:flex;flex-direction:column;line-height:1.6}header{background:#fff;position:sticky;top:0;z-index:100;box-shadow:0 2px 10px rgba(0,0,0,.08)}.navbar{display:flex;justify-content:space-between;align-items:center;padding:14px 0}.logo{display:flex;gap:10px;align-items:center;font-size:22px;font-weight:700;color:var(--primary);text-decoration:none}.logo i{color:var(--secondary)}nav .nav-links{display:flex;gap:22px;align-items:center}nav a{color:var(--dark);text-decoration:none;font-weight:500}nav a:hover,nav a.active{color:var(--primary)}.dropdown{position:relative}.dropdown-content{display:none;position:absolute;background:#fff;min-width:220px;border-radius:10px;box-shadow:0 8px 20px rgba(0,0,0,.12);top:100%;left:0;padding:10px 0}.dropdown:hover .dropdown-content{display:block}.dropdown-content a{display:block;padding:10px 18px}.hero{background:linear-gradient(135deg,var(--primary),var(--secondary));color:#fff;padding:60px 0;text-align:center;margin-bottom:30px;border-radius:0 0 20px 20px}.tool-page{background:#fff;border-radius:12px;padding:28px;box-shadow:0 5px 15px rgba(0,0,0,.05);margin-bottom:24px}.btn{display:inline-block;background:var(--primary);color:#fff;border:none;border-radius:40px;padding:10px 18px;margin-right:8px;cursor:pointer}.btn.secondary{background:#fff;color:var(--primary);border:1px solid var(--primary)}.comments{margin:40px 0}.section-title{margin-bottom:14px;color:var(--primary)}.comment-form{background:#fff;border-radius:12px;padding:20px;box-shadow:0 5px 15px rgba(0,0,0,.05)}.comment-form .form-group{margin-bottom:14px}.comment-form .form-control{padding:10px 12px;border:1px solid #ddd;border-radius:8px;outline:none}.comment-form .form-control:focus{border-color:var(--primary);box-shadow:0 0 0 3px rgba(67,97,238,.08)}footer{background:var(--dark);color:#fff;padding:40px 0 20px;margin-top:auto}.footer-content{display:grid;grid-template-columns:repeat(auto-fit,minmax(200px,1fr));gap:22px;margin-bottom:20px}.footer-links{list-style:none}.footer-links a{color:#aaa;text-decoration:none}.footer-links a:hover{color:#fff}.copyright{text-align:center;color:#aaa;border-top:1px solid #444;padding-top:16px;font-size:.9rem}@media(max-width:768px){nav .nav-links{display:none}}</style>
 <link href="css/header.css" rel="stylesheet"/>
 <link href="css/theme-modern.css" rel="stylesheet"/>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebPage",
+      "name": "AI Image Generator - Generate Images from Text Online Free | easyjpgtopdf",
+      "description": "Generate AI images from text prompts online for free. Create unique images using artificial intelligence. Free AI image generator.",
+      "url": "https://easyjpgtopdf.com/ai-image-generator.html",
+      "inLanguage": "en-US",
+      "isPartOf": {
+        "@type": "WebSite",
+        "name": "easyjpgtopdf",
+        "url": "https://easyjpgtopdf.com"
+      },
+      "publisher": {
+        "@type": "Organization",
+        "name": "easyjpgtopdf",
+        "url": "https://easyjpgtopdf.com"
+      }
+    }
+    </script>
 </head><body>
 <header>
         <div class="container">
@@ -97,6 +117,16 @@
             </nav>
         </div>
     </header>
+
+    <nav aria-label="Breadcrumb" style="padding: 15px 0; background: #f8f9ff; border-bottom: 1px solid #e2e6ff;">
+        <div class="container" style="max-width: 1200px; margin: 0 auto; padding: 0 24px;">
+            <ol style="list-style: none; display: flex; flex-wrap: wrap; gap: 10px; margin: 0; padding: 0; align-items: center;">
+                <li><a href="index.html" style="color: #4361ee; text-decoration: none; font-weight: 500;">Home</a> <span style="margin: 0 8px; color: #9ca3af;">/</span></li>
+                <li style="color: #56607a; font-weight: 500;">Ai Image Generator</li>
+            </ol>
+        </div>
+    </nav>
+
 <section class="hero"><div class="container"><h1>AI Image Generator - Generate Images from Text Online Free</h1><p>Generate creative images with AI. Coming soon.</p></div></section><main class="container"><div class="tool-page"><h2>Generate Images</h2><p>Coming soon: Enter prompt, pick style, generate and download images.</p><div style="margin-top:14px"><a class="btn" href="#">Try a Demo</a><a class="btn secondary" href="index.html">Back to Home</a></div></div>
     <section class="explanatory-content" style="margin: 40px 0; padding: 40px; background: linear-gradient(135deg, #f8f9ff, #ffffff); border-radius: 16px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
         <div class="container" style="max-width: 900px; margin: 0 auto;">
@@ -239,6 +269,32 @@
         icon.style.transform = isOpen ? 'rotate(0deg)' : 'rotate(90deg)';
     }
     </script>
+
+    <div class="trust-badges" style="text-align: center; padding: 20px; background: linear-gradient(135deg, #f8f9ff, #ffffff); border-radius: 12px; margin: 30px 0; border: 2px solid #e2e6ff;">
+        <div style="display: flex; justify-content: center; align-items: center; gap: 40px; flex-wrap: wrap;">
+            <div style="display: flex; align-items: center; gap: 10px;">
+                <i class="fas fa-shield-alt" style="font-size: 2rem; color: #4361ee;"></i>
+                <div style="text-align: left;">
+                    <div style="color: #0b1630; font-weight: 600; font-size: 1.1rem;">SSL Secured</div>
+                    <div style="color: #56607a; font-size: 0.9rem;">256-bit Encryption</div>
+                </div>
+            </div>
+            <div style="display: flex; align-items: center; gap: 10px;">
+                <i class="fas fa-lock" style="font-size: 2rem; color: #4361ee;"></i>
+                <div style="text-align: left;">
+                    <div style="color: #0b1630; font-weight: 600; font-size: 1.1rem;">100% Secure</div>
+                    <div style="color: #56607a; font-size: 0.9rem;">Files Auto-Deleted</div>
+                </div>
+            </div>
+            <div style="display: flex; align-items: center; gap: 10px;">
+                <i class="fas fa-check-circle" style="font-size: 2rem; color: #4361ee;"></i>
+                <div style="text-align: left;">
+                    <div style="color: #0b1630; font-weight: 600; font-size: 1.1rem;">AdSense Verified</div>
+                    <div style="color: #56607a; font-size: 0.9rem;">Google Approved</div>
+                </div>
+            </div>
+        </div>
+    </div>
 </main>    
 <script src="js/auth.js" type="module"></script>
 
