--- a/marriage-card.html
+++ b/marriage-card.html
@@ -5,6 +5,26 @@
 <link href="css/footer.css" rel="stylesheet"/><link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet"/><style>*{margin:0;padding:0;box-sizing:border-box;font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif}:root{--primary:#4361ee;--secondary:#3a0ca3;--light:#f8f9fa;--dark:#212529}.container{max-width:1200px;margin:0 auto;padding:0 20px}body{background:#f5f7ff;color:var(--dark);min-height:100vh;display:flex;flex-direction:column;line-height:1.6}header{background:#fff;position:sticky;top:0;z-index:100;box-shadow:0 2px 10px rgba(0,0,0,.08)}.navbar{display:flex;justify-content:space-between;align-items:center;padding:14px 0}.logo{display:flex;gap:10px;align-items:center;font-size:22px;font-weight:700;color:var(--primary);text-decoration:none}.logo i{color:var(--secondary)}nav .nav-links{display:flex;gap:22px;align-items:center}nav a{color:var(--dark);text-decoration:none;font-weight:500}nav a:hover,nav a.active{color:var(--primary)}.dropdown{position:relative}.dropdown-content{display:none;position:absolute;background:#fff;min-width:220px;border-radius:10px;box-shadow:0 8px 20px rgba(0,0,0,.12);top:100%;left:0;padding:10px 0}.dropdown:hover .dropdown-content{display:block}.dropdown-content a{display:block;padding:10px 18px}.hero{background:linear-gradient(135deg,var(--primary),var(--secondary));color:#fff;padding:60px 0;text-align:center;margin-bottom:30px;border-radius:0 0 20px 20px}.tool-page{background:#fff;border-radius:12px;padding:28px;box-shadow:0 5px 15px rgba(0,0,0,.05);margin-bottom:24px}.btn{display:inline-block;background:var(--primary);color:#fff;border:none;border-radius:40px;padding:10px 18px;margin-right:8px;cursor:pointer;transition:transform .2s ease,box-shadow .2s ease}.btn:hover{transform:translateY(-2px);box-shadow:0 6px 16px rgba(67,97,238,.2)}.btn.secondary{background:#fff;color:var(--primary);border:1px solid var(--primary)}.category-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:22px;margin:26px 0}.category-card{background:#fdfdff;border:1px solid rgba(67,97,238,.12);border-radius:18px;padding:22px;box-shadow:0 12px 28px rgba(15,23,42,.06);display:flex;flex-direction:column;gap:12px;transition:transform .2s ease,box-shadow .2s ease}.category-card:hover{transform:translateY(-6px);box-shadow:0 20px 40px rgba(67,97,238,.16)}.category-icon{width:54px;height:54px;border-radius:14px;display:inline-flex;align-items:center;justify-content:center;background:rgba(67,97,238,.12);color:var(--primary);font-size:1.4rem}.category-card h3{font-size:1.25rem;color:var(--secondary)}.category-card p{color:#4b5563;flex:1}.category-card .btn{align-self:flex-start;margin-top:6px}.category-card .btn[disabled]{background:rgba(67,97,238,.12);color:var(--primary);cursor:not-allowed;box-shadow:none;transform:none}.roadmap{margin-top:24px;padding:20px;border-radius:16px;background:#eef2ff;border:1px solid rgba(67,97,238,.18)}.roadmap h3{color:var(--secondary);margin-bottom:12px}.roadmap ul{padding-left:20px;color:#374151;display:grid;gap:8px}.roadmap li:before{content:"\f0da";font-family:"Font Awesome 6 Free";font-weight:900;color:var(--primary);margin-right:8px}.comment-form{background:#fff;border-radius:12px;padding:20px;box-shadow:0 5px 15px rgba(0,0,0,.05)}.comment-form .form-group{margin-bottom:14px}.comment-form .form-control{padding:10px 12px;border:1px solid #ddd;border-radius:8px;outline:none}.comment-form .form-control:focus{border-color:var(--primary);box-shadow:0 0 0 3px rgba(67,97,238,.08)}footer{background:var(--dark);color:#fff;padding:40px 0 20px;margin-top:auto}.footer-content{display:grid;grid-template-columns:repeat(auto-fit,minmax(200px,1fr));gap:22px;margin-bottom:20px}.footer-links{list-style:none}.footer-links a{color:#aaa;text-decoration:none}.footer-links a:hover{color:#fff}.copyright{text-align:center;color:#aaa;border-top:1px solid #444;padding-top:16px;font-size:.9rem}@media(max-width:768px){nav .nav-links{display:none}}</style>
 <link href="css/header.css" rel="stylesheet"/>
 <link href="css/theme-modern.css" rel="stylesheet"/>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebPage",
+      "name": "Marriage Card Maker - Create Wedding Invitation Online Free | easyjpgtopdf",
+      "description": "Create beautiful marriage invitation cards online for free. Design wedding cards with our free marriage card maker tool.",
+      "url": "https://easyjpgtopdf.com/marriage-card.html",
+      "inLanguage": "en-US",
+      "isPartOf": {
+        "@type": "WebSite",
+        "name": "easyjpgtopdf",
+        "url": "https://easyjpgtopdf.com"
+      },
+      "publisher": {
+        "@type": "Organization",
+        "name": "easyjpgtopdf",
+        "url": "https://easyjpgtopdf.com"
+      }
+    }
+    </script>
 </head><body>
 <header>
         <div class="container">
@@ -97,6 +117,16 @@
             </nav>
         </div>
     </header>
+
+    <nav aria-label="Breadcrumb" style="padding: 15px 0; background: #f8f9ff; border-bottom: 1px solid #e2e6ff;">
+        <div class="container" style="max-width: 1200px; margin: 0 auto; padding: 0 24px;">
+            <ol style="list-style: none; display: flex; flex-wrap: wrap; gap: 10px; margin: 0; padding: 0; align-items: center;">
+                <li><a href="index.html" style="color: #4361ee; text-decoration: none; font-weight: 500;">Home</a> <span style="margin: 0 8px; color: #9ca3af;">/</span></li>
+                <li style="color: #56607a; font-weight: 500;">Marriage Card</li>
+            </ol>
+        </div>
+    </nav>
+
 <section class="hero"><div class="container"><h1>Marriage Card Maker - Create Wedding Invitation Online Free</h1><p>Pick a category, personalise every detail, and export stunning cards for any occasion.</p></div></section><main class="container"><div class="tool-page"><h2>Choose a Card Collection</h2><p>Select a card type to start customising. Each collection will support editable templates, unicode fonts, and export to image or document formats.</p><div class="category-grid">
 <article class="category-card">
 <div class="category-icon"><i class="fas fa-ring"></i></div>
@@ -285,6 +315,32 @@
         icon.style.transform = isOpen ? 'rotate(0deg)' : 'rotate(90deg)';
     }
     </script>
+
+    <div class="trust-badges" style="text-align: center; padding: 20px; background: linear-gradient(135deg, #f8f9ff, #ffffff); border-radius: 12px; margin: 30px 0; border: 2px solid #e2e6ff;">
+        <div style="display: flex; justify-content: center; align-items: center; gap: 40px; flex-wrap: wrap;">
+            <div style="display: flex; align-items: center; gap: 10px;">
+                <i class="fas fa-shield-alt" style="font-size: 2rem; color: #4361ee;"></i>
+                <div style="text-align: left;">
+                    <div style="color: #0b1630; font-weight: 600; font-size: 1.1rem;">SSL Secured</div>
+                    <div style="color: #56607a; font-size: 0.9rem;">256-bit Encryption</div>
+                </div>
+            </div>
+            <div style="display: flex; align-items: center; gap: 10px;">
+                <i class="fas fa-lock" style="font-size: 2rem; color: #4361ee;"></i>
+                <div style="text-align: left;">
+                    <div style="color: #0b1630; font-weight: 600; font-size: 1.1rem;">100% Secure</div>
+                    <div style="color: #56607a; font-size: 0.9rem;">Files Auto-Deleted</div>
+                </div>
+            </div>
+            <div style="display: flex; align-items: center; gap: 10px;">
+                <i class="fas fa-check-circle" style="font-size: 2rem; color: #4361ee;"></i>
+                <div style="text-align: left;">
+                    <div style="color: #0b1630; font-weight: 600; font-size: 1.1rem;">AdSense Verified</div>
+                    <div style="color: #56607a; font-size: 0.9rem;">Google Approved</div>
+                </div>
+            </div>
+        </div>
+    </div>
 </main>
     
 <script src="js/auth.js" type="module"></script>
