--- a/test-donation.html
+++ b/test-donation.html
@@ -81,6 +81,26 @@
             border-radius: 4px;
         }
     </style>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebPage",
+      "name": "Test Donation API - EasyJpgToPdf",
+      "description": "Online PDF and image conversion tools",
+      "url": "https://easyjpgtopdf.com/test-donation.html",
+      "inLanguage": "en-US",
+      "isPartOf": {
+        "@type": "WebSite",
+        "name": "easyjpgtopdf",
+        "url": "https://easyjpgtopdf.com"
+      },
+      "publisher": {
+        "@type": "Organization",
+        "name": "easyjpgtopdf",
+        "url": "https://easyjpgtopdf.com"
+      }
+    }
+    </script>
 </head>
 <body>
 <header>
@@ -174,6 +194,16 @@
             </nav>
         </div>
     </header>
+
+    <nav aria-label="Breadcrumb" style="padding: 15px 0; background: #f8f9ff; border-bottom: 1px solid #e2e6ff;">
+        <div class="container" style="max-width: 1200px; margin: 0 auto; padding: 0 24px;">
+            <ol style="list-style: none; display: flex; flex-wrap: wrap; gap: 10px; margin: 0; padding: 0; align-items: center;">
+                <li><a href="index.html" style="color: #4361ee; text-decoration: none; font-weight: 500;">Home</a> <span style="margin: 0 8px; color: #9ca3af;">/</span></li>
+                <li style="color: #56607a; font-weight: 500;">Test Donation</li>
+            </ol>
+        </div>
+    </nav>
+
 <div class="container">
 <h1>🧪 Donation API Test Page</h1>
 <div class="info">
@@ -351,7 +381,33 @@
     
 <script src="js/auth.js"></script>
 
-    <footer>
+    
+    <div class="trust-badges" style="text-align: center; padding: 20px; background: linear-gradient(135deg, #f8f9ff, #ffffff); border-radius: 12px; margin: 30px 0; border: 2px solid #e2e6ff;">
+        <div style="display: flex; justify-content: center; align-items: center; gap: 40px; flex-wrap: wrap;">
+            <div style="display: flex; align-items: center; gap: 10px;">
+                <i class="fas fa-shield-alt" style="font-size: 2rem; color: #4361ee;"></i>
+                <div style="text-align: left;">
+                    <div style="color: #0b1630; font-weight: 600; font-size: 1.1rem;">SSL Secured</div>
+                    <div style="color: #56607a; font-size: 0.9rem;">256-bit Encryption</div>
+                </div>
+            </div>
+            <div style="display: flex; align-items: center; gap: 10px;">
+                <i class="fas fa-lock" style="font-size: 2rem; color: #4361ee;"></i>
+                <div style="text-align: left;">
+                    <div style="color: #0b1630; font-weight: 600; font-size: 1.1rem;">100% Secure</div>
+                    <div style="color: #56607a; font-size: 0.9rem;">Files Auto-Deleted</div>
+                </div>
+            </div>
+            <div style="display: flex; align-items: center; gap: 10px;">
+                <i class="fas fa-check-circle" style="font-size: 2rem; color: #4361ee;"></i>
+                <div style="text-align: left;">
+                    <div style="color: #0b1630; font-weight: 600; font-size: 1.1rem;">AdSense Verified</div>
+                    <div style="color: #56607a; font-size: 0.9rem;">Google Approved</div>
+                </div>
+            </div>
+        </div>
+    </div>
+<footer>
         <div class="container footer-inner">
             <div class="footer-company-links">
                 <span>Company</span>
